Fixed #8 - Nested expansion panel get instantiated/destroyed every time the parent panel get expanded/collapsed

--- a/app/styles/ember-paper-expansion-panel.scss
+++ b/app/styles/ember-paper-expansion-panel.scss
@@ -81,4 +81,8 @@ md-expansion-panel {
     line-height: 48px;
     padding: 10px 8px 10px 24px;
   }
+
+  .hide {
+    display: none;
+  }
 }
